syntax = "proto3";
package quorum.pb;
option go_package = "github.com/rumsystem/quorum/pkg/pb";

enum PackageType {
    TRX             = 0;
    BLOCK           = 1;
    HBB             = 2;
    CONSENSUS       = 3;
}

message Package {
    PackageType type = 1;
    bytes       Data = 2;
}

enum AnnounceType {
   AS_USER     = 0;
   AS_PRODUCER = 1;
}

enum ApproveType {
    ANNOUNCED = 0;
    APPROVED  = 1;
    REJECTED  = 2;
}

enum ActionType {
    ADD    = 0;
    REMOVE = 1;
}

enum TrxStroageType {
    CHAIN    = 0;
    CACHE = 1;
}

enum TrxType {
    POST               = 0; // post to group
    ANNOUNCE           = 1; // producer or user self announce
    PRODUCER           = 2; // owner update group producer
    USER               = 3; // owner update group user
    REQ_BLOCK          = 4; // request block 
    REQ_BLOCK_RESP     = 5; // response request block
    CHAIN_CONFIG       = 6; // chain configuration
    APP_CONFIG         = 7; // app configuration
}

message Trx {
    string         TrxId        = 1;
    TrxType        Type         = 2;    
    string         GroupId      = 3;
    bytes          Data         = 4; 
    int64          TimeStamp    = 5;
    string         Version      = 6;
    int64          Expired      = 7;
    int64          ResendCount  = 8;
    int64          Nonce        = 9;
    string         SenderPubkey = 10;  
    bytes          SenderSign   = 11;
    TrxStroageType StorageType  = 12;
    bool           Sudo         = 13;
}

message Witnesses {
    string   groupId       = 1;
    int64    epoch         = 2;
    bytes    TrxHash       = 3;
    string   WitnessPubkey = 4;
    bytes    WitnessSign   = 5;
}

message Block {
    string      GroupId            = 1;       
    int64       Epoch              = 2;  
    bytes       PrevEpochHash      = 3;
    repeated    Trx Trxs           = 4; 
    bytes       EpochHash          = 5; 
    repeated    Witnesses Witesses = 6;
    int64       TimeStamp          = 7;     
    bytes       BlockHash          = 8;
    string      BookkeepingPubkey  = 9;   
    bytes       BookkeepingSign    = 10;
    bool        Sudo               = 11;
}

message ReqBlock {
    string GroupId       = 1; //group id
    int64  FromEpoch     = 2; //from which epoch 
    int64  BlksRequested = 3; //how many blocks requested, "-1" means many as possible
    string ReqPubkey     = 4; //requester pubkey
}

message BlocksBundle {
    repeated Block Blocks = 1;
}

enum ReqBlkResult {
    BLOCK_IN_RESP         = 0; //"block(s) in resp and I may have more"
    BLOCK_IN_RESP_ON_TOP  = 1; //"block(s) in resp and I have no more block(when get req)" 
    BLOCK_NOT_FOUND       = 2; //"no block in resp and I don't have the requested block"
}

message ReqBlockResp {
    string       GroupId         = 1;
    ReqBlkResult Result          = 2;       
    string       RequesterPubkey = 3;
    string       ProviderPubkey  = 4;
    int64        FromEpoch       = 5;
    int64        BlksRequested   = 6;     
    int64        BlksProvided    = 7;
    BlocksBundle Blocks          = 8;
}

message PostItem {
    string TrxId        = 1;
    string SenderPubkey = 2;
    bytes  Content      = 3;
    int64  TimeStamp    = 4;
}

message ProducerItem {
   string     GroupId             = 1;
   string     ProducerPubkey      = 2;
   string     GroupOwnerPubkey    = 3;   
   string     GroupOwnerSign      = 4;
   int64      TimeStamp           = 5;    
   ActionType Action              = 6;
   int64      WithnessBlockNum    = 7;
   string     Memo                = 8;
}

message BFTProducerBundleItem {
    repeated ProducerItem Producers = 1;
}

message UserItem {
   string     GroupId             = 1;
   string     UserPubkey          = 2;
   string     EncryptPubkey       = 3;
   string     GroupOwnerPubkey    = 4;
   string     GroupOwnerSign      = 5;
   int64      TimeStamp           = 6;
   ActionType Action              = 7;
   string     Memo                = 8;
}

message AnnounceItem {
    string       GroupId            = 1;
    string       SignPubkey         = 2;
    string       EncryptPubkey      = 3;
    string       AnnouncerSignature = 4;
    AnnounceType Type               = 5;
    string       OwnerPubkey        = 6;
    string       OwnerSignature     = 7;
    ApproveType  Result             = 8;    
    int64        TimeStamp          = 9; 
    ActionType   Action             = 10;
    string       Memo               = 11;
}

enum GroupEncryptType {
    PUBLIC   = 0;
    PRIVATE  = 1;
}

enum GroupConsenseType {
    POA = 0;
    POS = 1;
}

message GroupItem {
    string            GroupId                 = 1;
    string            GroupName               = 2;
    string            OwnerPubKey             = 3;
    string            UserSignPubkey          = 4;
    string            UserEncryptPubkey       = 5;
    int64             LastUpdate              = 6;
    Block             GenesisBlock            = 7;
    GroupEncryptType  EncryptType   = 8;
    GroupConsenseType ConsenseType = 9;
    string            CipherKey               = 10;
    string            AppKey                  = 11;
}

enum RoleV0 {
    GROUP_PRODUCER = 0;
    GROUP_USER     = 1;
}

enum ChainConfigType {
    SET_TRX_AUTH_MODE = 0;
    UPD_DNY_LIST      = 1;
    UPD_ALW_LIST      = 2;
}

enum TrxAuthMode {
    FOLLOW_ALW_LIST = 0;
    FOLLOW_DNY_LIST = 1;
}

enum AuthListType {
    ALLOW_LIST = 0;
    DENY_LIST  = 1;
} 

message ChainConfigItem {
    string          GroupId        = 1;
    ChainConfigType Type           = 2;
    bytes           Data           = 3;
    string          OwnerPubkey    = 4;
    string          OwnerSignature = 5;
    int64           TimeStamp      = 6;       
    string          Memo           = 7; 
}

message ChainSendTrxRuleListItem {
    ActionType Action       = 1; 
    string     Pubkey       = 3;
    repeated   TrxType Type = 4;
}

message SetTrxAuthModeItem {
    TrxType     Type = 1;
    TrxAuthMode Mode = 2;
}

enum AppConfigType {
    INT    = 0;
    BOOL   = 1;
    STRING = 2;
}

message AppConfigItem{
    string        GroupId     = 1;
    ActionType    Action      = 2;
    string        Name        = 3;
    AppConfigType Type        = 4;
    string        Value       = 5;
    string        OwnerPubkey = 6;
    string        OwnerSign   = 7;
    string        Memo        = 8;
    int64         TimeStamp   = 9;
}

message GroupSeed {
    Block  GenesisBlock   = 1;
    string GroupId        = 2;
    string GroupName      = 3;
    string OwnerPubkey    = 4;
    string ConsensusType  = 5;
    string EncryptionType = 6;
    string CipherKey      = 7;
    string AppKey         = 8;
    string Signature      = 9;
}

//for NodeSDK
message NodeSDKGroupItem {
    GroupItem Group          = 1;
    string    EncryptAlias   = 2;
    string    SignAlias      = 3;
    repeated  string ApiUrl  = 4;
    string    GroupSeed      = 5;
}

//for consensus
enum HBBMsgType {
    BROADCAST = 0;    
    AGREEMENT = 1; //not used
}

enum BroadcastMsgType {
    PROOF = 0;
    READY = 1;
}

enum HBMsgPayloadType {
    HB_TRX   = 0;
    HB_PSYNC = 1;
}

message HBMsgv1 {
    string           MsgId       = 1;
    string           SessionId   = 2;    
    HBBMsgType       MsgType     = 3;
    int64            Epoch       = 4;
    HBMsgPayloadType PayloadType = 5;
    bytes            Payload     = 6;
}

message HBTrxBundle {
    repeated Trx Trxs = 1;
}

message BroadcastMsg {
    BroadcastMsgType Type         = 2;
    bytes            Payload      = 4;
}

message Proof{ 
    bytes          RootHash         = 1;
    repeated bytes Proof            = 2;
    int64          Index            = 3;
    int64          Leaves           = 4;
    string         ProposerPubkey   = 5;
    bytes          ProposerSign     = 6;
    int64          OriginalDataSize = 7;
}

message Ready {
    bytes  RootHash             = 1;
    string ProofProviderPubkey  = 2;
    string ProposerPubkey       = 3;
    bytes  ProposerSign         = 4;
}

enum AgreementMsgType {
    BVAL  = 0;
    AUX   = 1;
}

message AgreementMsg {
    AgreementMsgType  Type       = 1;
    string            ProposerId = 2;
    string            SenderId   = 3;
    int64             Epoch      = 4;
    bytes             Payload    = 5;
}

message Bval {
    bool Value = 1;
}

message Aux {
    bool Value = 1;
}

message PSyncProducerItem {
    repeated string Producers = 1;
}

enum ConsensusType {
    REQ  = 0;
    RESP = 1;
}

message ConsensusMsg {
    string        GroupId       = 1;
    string        SessionId     = 2;
    ConsensusType MsgType       = 3;
    bytes         Payload       = 4;
    string        SenderPubkey  = 5;
    int64         TimeStamp     = 6;
    bytes         MsgHash       = 7;
    bytes         SenderSign    = 8;
}

//for CONSENSE_REQ
message ConsensusReq {
    int64        MyEpoch             = 1;
}

//for CONSENSE_RESULT
message ConsensusResp {
    int64                CurChainEpoch  = 1;
    PSyncProducerItem    CurProducer    = 2;
    repeated   Witnesses Witesses       = 3;
    Trx                  ProducerProof  = 4;
}

//old proto msg
message GroupItemV0 {
    string GroupId                 = 1;
    string GroupName               = 2;
    string OwnerPubKey             = 3;
    string UserSignPubkey          = 4;
    string UserEncryptPubkey       = 5;
    RoleV0 UserRole                = 6;
    int64  LastUpdate              = 7;
    int64  HighestHeight           = 8;
    string HighestBlockId          = 9;
    Block  GenesisBlock            = 10;
    GroupEncryptType EncryptType   = 11;
    GroupConsenseType ConsenseType = 12;
    string CipherKey               = 13;
    string AppKey                  = 14;
}


